@@ -1,3 +1,8 @@
+Fri Mar  9 11:38:34 2007  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* Makefile.am (fmtspcl.tok): Removed use of and reference
+	to this file.
+
 Tue Feb  6 08:21:02 2007  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (double1, double2, zero2): New tests.
